<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="comp3350.goodhabits.Presentation.AddActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:fillViewport="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/habit_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="80dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/habit_name_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/habit_name"
                android:textColor="#1e5945"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/habit_name_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:ems="20"
                android:hint="@string/enter_the_habit_name"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/habit_type_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/habit_type"
                android:textColor="#1e5945"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/habit_type_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/good_habit"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:onClick="selectedButton"
                    android:text="@string/good_habit"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <RadioButton
                    android:id="@+id/bad_habit"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:onClick="selectedButton"
                    android:text="@string/bad_habit"
                    android:textSize="18sp"
                    android:textStyle="normal" />
            </RadioGroup>

            <TextView
                android:id="@+id/habit_message_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/assign_a_message"
                android:textColor="#1e5945"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/habit_message_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:ems="20"
                android:hint="@string/enter_a_message_related_to_this_habit"
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/time_picker_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/pick_a_time"
                    android:textColor="#1e5945"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:id="@+id/time_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="0dp"
                android:text="@string/open_time_picker"
                android:textColor="#000000"
                android:textSize="14sp"
                app:backgroundTint="#FFFFFF"
                app:iconTint="#FFFFFF"
                app:strokeColor="#1e5945"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/submit_habit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/add"
                android:textSize="18sp" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
