...
            android:contentDescription="@string/settings"
            android:scaleType="fitCenter"
            android:tint="#1e5945"
            app:srcCompat="@drawable/settings" />

        <ImageButton
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginLeft="45dp"
            android:layout_marginEnd="45dp"
            android:layout_marginRight="45dp"
...
